continuing on with adding recipes

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,9 @@
-<p>shopping-list works!</p>
+
+
+<div class="row">
+<div class="col-xs-10">
+  <app-edit></app-edit>
+  <hr>
+  <p>The List</p>
+</div>
+</div>
